Fixed content alignment

--- a/src/styles/pages/index.module.scss
+++ b/src/styles/pages/index.module.scss
@@ -3,6 +3,7 @@
 .main {
   display: flex;
   flex-direction: column;
+  align-items: center;
   color: white;
   background-color: $color-black;
   gap: 2rem;
@@ -10,8 +11,7 @@
     max-width: 1300px;
   }
   padding: 1rem;
-
-  .projectsSection {
+  align .projectsSection {
     display: flex;
     flex-direction: column;
     gap: 1rem;
